<resources>
    <string name="app_name">MedicineCrud</string>
    <string name="medicineName">MedicineName</string>
    <string name="generic">Generic</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="add_medicine">AddMedicine</string>
    <string name="list_page">ListMedicine</string>
    <string name="update">Update</string>
</resources>